# ai_notes_copy

examples/codefuse-devops-eval/: README.md  README_zh.md
examples/dycause_rca/: main_cloud_ranger.py  main_dycause.py  main_dycause_mp.py  main_monitor_rank.py  main_netmedic.py  main_tbac.py  test_all.py
examples/dycause_rca_docs/: clazz_doc_dict.json  dycause_rca.sqlite3  file_summary_dict.json  func_doc_dict.json
model_arena/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
model_arena/examples/: pairwise_score_stat.py
model_arena/examples/analysis/: elo_rating.py  niah.py
model_arena/examples/evaluation/: exact_match.py  gpt_judge.py
model_arena/model_arena/: __init__.py  arena.py  base.py  datasets.py  models.py  utils.py
model_arena/model_arena/core/: __init__.py  engine.py  llms.py
model_arena/model_arena/extensions/: __init__.py  base.py
model_arena/model_arena/extensions/analysis/: __init__.py  analyst.py
model_arena/model_arena/extensions/evaluation/: evaluator.py
model_arena/model_arena/modules/: datasets.py  models.py
model_arena/tests/: test_analysts.py  test_datasets.py  test_models.py
model_arena/tutorials/: section 1 - meta.ipynb  section 2 - inference.ipynb  section 3.2 - match.ipynb
notes/: _agent.py  _exceptions.py  options.py
notes/config/: config_loader.py  settings.py  validators.py
notes/core/: coke_kg_builder.py  preprocess.py
notes/models/: dalle.py  factory.py  gemini.py  models.py  offline.py  openai.py  prompts.py  readme  tokens.py
notes/parsers/: __init__.py  (+3 more)
test/: __init__.py
(+78 files in other folders)
